--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 teamCard.innerHTML = `
                     <div class="team-header">
-                        <h3 class="team-name">Team ${teamId}</h3>
+                        <h3 class="team-name">Team ${team.name}</h3>
                         ${team.eliminated ? '<span class="eliminated-badge">ELIMINATED</span>' : ''}
                     </div>
                     <div class="minus-points">
