--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="title">All Kerala Musha'ra Contest</h1>
+            <h1 class="title">All Kerala Musha'ra Contest - Score Board</h1>
             <div class="status-bar">
                 <span id="activeCount" class="status-item">26 Teams Active</span>
                 <span id="eliminatedCount" class="status-item">0 Eliminated</span>
