--- a/lock.html
+++ b/lock.html
@@ -1,54 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Protected Page</title>
+  <meta charset="UTF-8">
+  <title>Confetti Effect</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
-      background-color: #f0f0f0;
-      display: none;
+      overflow: hidden;
+      background: #f0f8ff;
     }
 
-    .container {
-      text-align: center;
-      margin-top: 100px;
+    #confetti-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      pointer-events: none;
+      z-index: 9999;
     }
 
-    h1 {
-      color: #2c3e50;
+    .confetti {
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      background-color: red;
+      opacity: 0.8;
+      border-radius: 2px;
+      animation: fall linear forwards;
     }
 
-    .locked {
-      display: none;
+    @keyframes fall {
+      0% {
+        transform: translateY(-10%) rotate(0deg);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(110vh) rotate(720deg);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container" id="content">
-    <h1>🔒 Welcome to the Secret Page</h1>
-    <p>This content is visible only to authenticated users.</p>
-  </div>
 
-  <script>
-    // Set your credentials
-    const correctUsername = "admin";
-    const correctPassword = "1234";
+<div id="confetti-container"></div>
 
-    // Prompt user
-    const username = prompt("Enter username:");
-    const password = prompt("Enter password:");
+<script>
+  const confettiContainer = document.getElementById('confetti-container');
+  const colors = ['#ff6b6b', '#4ecdc4', '#feca57', '#ff9ff3', '#54a0ff', '#1dd1a1', '#ff6348'];
 
-    // Authenticate
-    if (username === correctUsername && password === correctPassword) {
-      document.body.style.display = "block"; // Show content
-    } else {
-      alert("Access Denied!");
-      document.body.innerHTML = "<h1 style='color:red; text-align:center;'>Unauthorized Access</h1>";
+  function createConfettiPiece() {
+    const confetti = document.createElement('div');
+    confetti.classList.add('confetti');
+    confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+    confetti.style.left = Math.random() * 100 + 'vw';
+    confetti.style.animationDuration = (Math.random() * 2 + 3) + 's';
+    confetti.style.width = Math.random() * 10 + 10 + 'px';
+    confetti.style.height = Math.random() * 10 + 10 + 'px';
+    confetti.style.animationDelay = Math.random() * 2 + 's';
+
+    confettiContainer.appendChild(confetti);
+
+    setTimeout(() => {
+      confetti.remove();
+    }, 6000);
+  }
+
+  function launchConfetti(amount = 100) {
+    for (let i = 0; i < amount; i++) {
+      createConfettiPiece();
     }
-  </script>
+  }
+
+  // Launch confetti on page load
+  launchConfetti();
+
+  // Optional: Re-trigger on click
+  document.body.addEventListener('click', () => {
+    launchConfetti(50);
+  });
+</script>
+
 </body>
 </html>
